...
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="@android:color/background_light"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editMessage"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_weight="16"
            android:hint="Type here..."
            android:inputType="textMultiLine"
            android:maxLength="150"
            android:scrollbars="vertical"
            android:textColor="@android:color/black" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_weight="0.5"
            android:background="@android:color/transparent"
            android:src="@drawable/arrow"
...
