<resources>

    <!-- Confirmation Dialog -->
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_clear_chat_title">Confirmation</string>
    <string name="confirm_clear_chat_msg">Do you really want to clear the chat history?</string>

    <string name="app_name">NodeChat</string>
    <string name="chatentry_global">chatentry_global</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>
...
