...
            android:text="Choose your nickname:"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/editNick"
            android:layout_width="280dp"
            android:layout_height="55dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:hint="Type here..."
...
            android:textAlignment="center"
            android:textColor="#ff0000"
            android:textSize="15sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/buttonEnter"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonview"
            android:text="Let´s go" />
...
