<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menuOpen">

    <item
        android:id="@+id/menuMuteChat"
        android:title="Mute"/>
    <item
        android:id="@+id/menuClearHistory"
        android:title="Clear history"/>
</menu>